--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.2",
-    "styled-components": "^5.3.6",
+    "react-router-dom": "^6.9.0",
+    "styled-components": "^5.3.9",
     "sweetalert2": "^11.7.3",
     "yup": "^1.0.2"
   },
