--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "styled-components": "^5.3.9",
     "sweetalert2": "^11.7.3",
