--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
+    "redux": "^4.2.1",
     "styled-components": "^5.3.9",
+    "sweetalert": "^2.1.2",
     "sweetalert2": "^11.7.3",
     "yup": "^1.0.2"
   },
